--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@200;500&family=David+Libre&display=swap"
     rel="stylesheet" />
 
-  <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+<!--   <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"> -->
+  <script src="https://kit.fontawesome.com/3ef87ce392.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
   <link rel="stylesheet" href="styles/style.css" />
 </head>
