--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </div>
   </section>
   <footer class="footer">
-    <div class="contact"> <p> <i class="fa fa-phone fa-lg"></i> +2348068569991</p>
+    <div class="contact"> <p> <i class="fa fa-phone "></i> +2348068569991</p>
       <a href="#" class="mycv">See my CV</a></div>
     <div class="footer-ul">
     <h4>Say Hi to:</h4>
