--- a/portfolio1.html
+++ b/portfolio1.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@200;500&family=David+Libre&display=swap"
         rel="stylesheet" />
 
-<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+<!-- <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css"> -->
+    <script src="https://kit.fontawesome.com/3ef87ce392.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/style2.css">
 </head>
@@ -115,7 +116,7 @@
         </ul>
     </main>
     <footer class="footer">
-        <div class="contact"> <p> <i class="fa fa-phone fa-lg"></i> +2348068569991</p>
+        <div class="contact"> <p> <i class="fa fa-phone"></i> +2348068569991</p>
           <a href="#" class="mycv">See my CV</a></div>
         <div class="footer-ul">
         <h4>Say Hi to:</h4>
