--- a/portfolio1.html
+++ b/portfolio1.html
@@ -123,10 +123,10 @@
         <a href="mailto:olanrewajufcb@gmail.com" class="footer-link"> <i class="fa fa-envelope"></i> olanrewajufcb@gmail.com</a>
         <ul class="social-list">
           <li class="social-list-item">
-            <a href="github.com/olanrewajufcb" class="social-list-link"><i class="fa fa-github-square fa-lg"></i></a>
+            <a href="https://github.com/olanrewajufcb" class="social-list-link"><i class="fa fa-github-square fa-lg"></i></a>
           </li>
           <li class="social-list-item">
-            <a href="twitter.com/olanrewajufcb" class="social-list-link"><i class="fa fa-twitter fa-lg"></i></a>
+            <a href="https://twitter.com/olanrewajufcb" class="social-list-link"><i class="fa fa-twitter fa-lg"></i></a>
           </li>
           <li class="social-list-item">
             <a href="https://codepen.io/olanrewajufcb" class="social-list-link"><i class="fa fa-codepen fa-lg"></i></a>
