--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
         <a href="https://github.com/olanrewajufcb" class="social-list-link"><i class="fa fa-github-square fa-lg"></i></a>
       </li>
       <li class="social-list-item">
-        <a href="https://twitter.com/olanrewajufcb" class="social-list-link"><i class="fa fa-twitter fa-lg"></i></a>
+        <a href="https://twitter.com" class="social-list-link"><i class="fa fa-twitter fa-lg"></i></a>
       </li>
       <li class="social-list-item">
         <a href="https://codepen.io/olanrewajufcb" class="social-list-link"><i class="fa fa-codepen fa-lg"></i></a>
       </li>
       <li class="social-list-item">
-        <a href="https://www.linkedin.com/in/sulaiman-olanrewaju-issa-7a61b5a3/" class="social-list-link"><i
+        <a href="https://www.linkedin.com" class="social-list-link"><i
             class="fa fa-linkedin"></i></a>
       </li>
     </ul>
